addded pantaloon -> FDT project

--- a/html-template/JWPanoPlayer.html
+++ b/html-template/JWPanoPlayer.html
@@ -40,7 +40,7 @@
             var swfVersionStr = "10.0.0";
             <!-- To use express install, set to playerProductInstall.swf, otherwise the empty string. -->
             var xiSwfUrlStr = "playerProductInstall.swf";
-            var flashvars = {title:'Live Stream', verticalfov:'60', provider:'rtmp', skin:'skin/pantaloons.xml', projectiontype:'equirectangular', tiltmin:'-50', tiltmax:'50',  file:'nascar360_1@58684', streamer:'rtmp://cp117988.live.edgefcs.net/live/'};
+            var flashvars = {title:'Live Stream', provider:'video', skin:'skin/pantaloons.xml', projectiontype:'equirectangular',panmin:'0',panmax:'360',tiltmin:"50",tilmax:'40.5'/*, tiltmin:'-180', tiltmax:'0' */,  file:'17NOV-Odile Nouvel_VO_small.flv'};
             var params = {};
             params.quality = "high";
             params.bgcolor = "#ffffff";
